--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,16 @@
 .toolbar-spacer {
     flex: 1 1 auto;
 }
+
 .flexSpaceBetween {
     justify-content: space-between;
+    position: sticky;
+    position: -webkit-sticky; /* For macOS/iOS Safari */
+    top: 0; /* Sets the sticky toolbar to be on top */
+    z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
 }
+:host /deep/ router-outlet ~ * {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
