--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,3 @@
-<!-- <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-  <div class="container">
-    <a class="navbar-brand"></a>
-    <ul class="nav navbar-nav" routerLinkActive="active">
-      <li class="nav-item"><a class="nav-link" routerLink=""></a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="">About</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="">Farm</a></li>
-    </ul>
-  </div>
-</nav>
-
-<div style="margin-top: 150px;">
-  <router-outlet></router-outlet>
-
-</div> -->
 <mat-toolbar class="flexSpaceBetween">
     <span>
       <h1>Tabang Na!</h1>
@@ -33,7 +18,7 @@
 
 </mat-toolbar>
 
-<div style="height: 88vh;">
+<div style="height: 88vh;" [@fadeAnimation]="getRouterOutletState(o)">
 
-  <router-outlet></router-outlet>
+  <router-outlet #o="outlet"></router-outlet>
 </div>
