--- a/src/app/farm/farm.component.html
+++ b/src/app/farm/farm.component.html
@@ -8,7 +8,7 @@
                     <mat-card-title>{{farm.project}}</mat-card-title>
                     <mat-card-subtitle>{{farm.location}}</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image [src]="getRandomImage()" alt="Photo of a Shiba Inu">
+                <img mat-card-image [src]="getRandomImage()">
                 <mat-card-content>
                     <p>
                         Hectars: {{farm.hectars}}
