--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,8 +6,8 @@
     justify-content: space-between;
     position: sticky;
     position: -webkit-sticky; /* For macOS/iOS Safari */
-    top: 0; /* Sets the sticky toolbar to be on top */
-    z-index: 1000; /* Ensure that your app's content doesn't overlap the toolbar */
+    top: 0; 
+    z-index: 1000; 
 }
 :host /deep/ router-outlet ~ * {
     position: absolute;
