--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="flexSpaceBetween">
     <span>
-      <h1>Tabang Na!</h1>
+     <img [src]="'../../assets/pics/logo.png'">
     </span>
     <span>
       <a mat-button [routerLink]="'/home'"> Home </a>
