--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,1 +1,17 @@
-<p>faq works!</p>
+<div style="margin-left: 300px; margin-right: 300px;">
+<div class="col-8">
+    <h2>Frequently Asked Questions</h2>
+    <div>
+    <p style = "font-family:verdana;font-size: 22px;">What is Tabang Na?</p>
+    <p style ="margin-left: 40px;font-family:verdana;font-size: 15px;">   ● It is an application created to provide livelihood among fisherman. In order keep themselves from selling their products at a right and justifiable amount.
+        They can build a network among nearby and far areas, anywhere as far as the product goes. </p> &nbsp;
+   <p style = "font-family:verdana;font-size: 22px;">What is the scope of the application(Tabang Na)?</p>
+   <p style ="margin-left: 40px;font-family:verdana;font-size: 15px;">  ● The focus is on farming itself that coves the entire aquamarine culture industry including selling and buying directly to consumers. In terms of mechanization and automation, the latest and most modern tools, equipment and facilities will be adapted. </p> &nbsp;
+   <p style = "font-family:verdana;font-size: 22px;">What are its benefits to agriculture industry?</p>
+    <p style ="margin-left: 40px;font-family:verdana;font-size: 15px;"> ● The benefits herewith are fisherman can easily market and advertise its product through the use of our technology. Its a user friendly apllication that lets the everyone communicate easily. It can boost the production or market by the use of our application because its easy to set an order and its house to house delivery.  </p> &nbsp;
+   <p style = "font-family:verdana;font-size: 22px;">What are the payment option?</p>
+   <p style ="margin-left: 40px;font-family:verdana;font-size: 15px;">●  You can pay it thru online or cash on delivery.  </p>
+    
+    </div>            
+</div>
+</div>
