--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,92 @@
-<p>about works!</p>
+<style>
+    div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+    img {
+      border-radius: 50%;
+    }
+    </style>
+<div style="margin-left: 300px; margin-right: 300px;">
+    <div class="col-8">
+        <h2>Our Story</h2>
+        <h1>We the Team!</h1>
+        <p><i>“Those who are crazy enough to think they can change the world usually do.” - Steve Jobs</i></p>
+        <div class="responsive">
+            <div class="gallery">
+                <img [src]="'../../assets/pics/1.jpeg'" alt="Avatar" style="width:200px">
+            
+              <div class="desc">John Chris Dela Cruz |  Mobile Developer</div>
+            </div>
+          </div>
+          
+          
+          <div class="responsive">
+            <div class="gallery">
+                <img [src]="'../../assets/pics/2.jpeg'" alt="Avatar" style="width:200px">
+              <div class="desc"> Ariel Cerilla | Desktop Developer</div>
+            </div>
+          </div>
+          
+          <div class="responsive">
+            <div class="gallery">
+                <img [src]="'../../assets/pics/3.jpeg'" alt="Avatar" style="width:200px">
+              <div class="desc">Crystle Ann Flores | Desktop Developer \ Web Developer</div>
+            </div>
+          </div>
+          
+          <div class="responsive">
+            <div class="gallery">
+                <img [src]="'../../assets/pics/4.jpeg'" alt="Avatar" style="width:200px">
+              <div class="desc">Carlos Quintos | Full Stack Developer</div>
+            </div>
+          </div>
+          
+          <div class="clearfix"></div>
+          
+        <div >
+           
+    </div>  
+</div>  
